# oxen

./: .gitignore  AppState.h  AppStateManager.cpp  AppStateManager.h  AppStateMangager.cpp  AppStateMangager.h  CMakeLists.txt  Framework.cpp  Framework.h  GameSettings.cpp  GameSettings.h  GameState.cpp  GameState.h  MainMenu.cpp  MainMenu.h  MenuManager.cpp  MenuManager.h  OxenApp.cpp  OxenApp.h  README  README.md  TODO  main.cpp
Engine/: Engine.cpp  Engine.h  Entity.h  EntityMgr.cpp  EntityMgr.h  InterEntity.cpp  InterEntity.h  PhysicsEntity.cpp  PhysicsEntity.h  RenderEntity.cpp  RenderEntity.h
Engine/Networking/: NetworkInput.h  NetworkedEntity.h  Translator.h
battleGame/: BattleState.h  Formation.h  Ship.h
cmake_modules/: FindCEGUI.cmake
